--- a/!Report.html
+++ b/!Report.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html> <html lang="ru"> <head> <meta charset="UTF-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <meta name="viewport" content="width=device-width, 
 initial-scale=1.0"> <title>OCC MP Reports - Financial Help</title> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"> 
-<style> html{box-sizing:border-box}*,*::before,*::after{box-sizing:inherit}h2{margin-top:0px}img{display:block;width:100%;height:100%}.about-section{padding-top:20px;padding-bottom:60px}@media screen and (min-width: 768px) 
-{.about-section{padding-top:40px}}@media screen and (min-width: 768px){.about-section{padding-top:60px}}.container{max-width:100%;padding-left:15px;padding-right:15px;margin:0 auto}@media screen and (min-width: 480px) 
-{.container{max-width:480px}}@media screen and (min-width: 768px){.container{max-width:768px}}@media screen and (min-width: 1200px){.container{max-width:1200px}}@media screen and (min-width: 1800px) 
-{.container{max-width:1800px}}.flex-container{margin-bottom:30px}@media screen and (max-width: 767px){.flex-container{display:flex;flex-direction:column-reverse}}@media screen and (min-width: 1200px) 
-{.flex-container{margin-bottom:92px}}@media screen and (min-width: 1800px){.flex-container{margin-bottom:102px}}.box-set{display:flex;flex-wrap:wrap;margin-left:-10px;align-content:flex-start}@media screen and (min-width: 768px)
-{.box-set{float:right;width:380px;margin-left:10px}}@media screen and (min-width: 1200px){.box-set{width:737px}}@media screen and (min-width: 1800px){.box-set{width:1203px}}.box{outline:auto;margin-bottom:10px;max-height:150px;
-flex-basis:calc(50% - 10px);margin-left:10px;display:flex;align-items:center;justify-content:center;overflow:hidden}@media screen and (min-width: 1200px){.box{flex-basis:calc(33.3333333333% - 10px);max-height:200px}}@media screen and (min-width: 1800px)
-{.box{max-height:300px}}.clearfix{clear:both}@media print{html{box-sizing:border-box}*,*::before,*::after{box-sizing:inherit}p,h1,h2,h3,h4,h5,h6{margin:0}img{display:block;width:100%;height:100%}
-.about-section{padding-top:60px;padding-bottom:60px}.container{padding-left:15px;padding-right:15px;margin:0 auto;width:1200px}.flex-container{margin-top:10px;margin-bottom:30px;page-break-after:always}
-.box-set{display:flex;flex-wrap:wrap;margin-left:-10px;align-content:flex-start;float:right;margin-left:10px;margin:10px;width:737px}.box{outline:auto;margin-bottom:10px;max-height:150px;margin-left:10px;flex-basis:calc(33.3333333333% - 10px);
-max-height:200px;display:flex;align-items:center;justify-content:center;overflow:hidden}.clearfix{clear:both}}/*# sourceMappingURL=main.min.css.map */ 
-</style> </head> <body> <header></header> <main> <section class="about-section">  <div class="container">  <h1>OCC MP Reports - Financial Help</h1> 
+<style> html{box-sizing:border-box}*,*::before,*::after{box-sizing:inherit}h1{font-size:26px}@media screen and (min-width: 768px){h1{margin-bottom:30px}}@media screen and (min-width: 1200px)
+{h1{font-size:28px;line-height:1;letter-spacing:.03em;margin-bottom:40px}}h2{margin-top:0px}img{display:block;width:100%;height:100%}.about-section{padding-top:20px;padding-bottom:60px}
+.container{max-width:100%;padding-left:15px;padding-right:15px;margin:0 auto}@media screen and (min-width: 480px){.container{max-width:480px}}@media screen and (min-width: 768px){
+.container{max-width:768px}}@media screen and (min-width: 1200px){.container{max-width:1200px}}@media screen and (min-width: 1800px){.container{max-width:1800px}}.flex-container{margin-bottom:30px}@media screen and (max-width: 767px){
+.flex-container{display:flex;flex-direction:column-reverse}}@media screen and (min-width: 1200px){.flex-container{margin-bottom:92px}}@media screen and (min-width: 1800px){.flex-container{margin-bottom:102px}}
+.box-set{max-width:100%;display:flex;flex-wrap:wrap;margin-left:-10px;align-content:flex-start}@media screen and (min-width: 768px){.box-set{float:right;width:380px;margin-left:10px}}@media screen and (min-width: 1200px){
+.box-set{width:737px}}@media screen and (min-width: 1800px){.box-set{width:1203px}}
+.box{outline:auto;margin-bottom:10px;max-height:150px;flex-basis:calc(50% - 10px);margin-left:10px;display:flex;align-items:center;justify-content:center;overflow:hidden}@media screen and (min-width: 1200px){
+.box{flex-basis:calc(33.3333333333% - 10px);max-height:200px}}@media screen and (min-width: 1800px){.box{max-height:300px}}.clearfix{clear:both}@media print{html{box-sizing:border-box}*,*::before,*::after{box-sizing:inherit}
+h1{font-size:28px;line-height:1;letter-spacing:.03em;margin-top:0;margin-bottom:40px}h2{margin-top:0px}img{display:block;width:100%;height:100%}.about-section{padding-top:60px;padding-bottom:60px}.container{padding-left:15px;padding-right:15px;margin:0 auto;width:1200px}
+.flex-container{margin-top:10px;margin-bottom:30px;page-break-after:always}.box-set{display:flex;flex-wrap:wrap;margin-left:-10px;align-content:flex-start;float:right;margin:10px;width:737px}.box{outline:auto;margin-bottom:10px;margin-left:10px;flex-basis:calc(33.3333333333% - 10px);
+max-height:200px;display:flex;align-items:center;justify-content:center;overflow:hidden}.clearfix{clear:both}}/*# sourceMappingURL=main.min.css.map */
+</style>
+</head> <body> <header></header> <main> <section class="about-section">  <div class="container">  <h1>OCC MP Reports - Financial Help</h1> 
 <h3 style="color:DarkRed;">Reports submitted:  1031 </h3>
 <div class="flex-container">
 <div class="box-set">
